# memoryport

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TECHNICAL_SPEC.md  dev.sh  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml  tauri-build.yml
.next/: trace  trace-build
config/: default.toml
crates/uc-arweave/: Cargo.toml
crates/uc-arweave/src/: client.rs  graphql.rs  lib.rs  transaction.rs  turbo.rs  types.rs  wallet.rs
crates/uc-cli/: Cargo.toml
crates/uc-cli/src/: init.rs  main.rs
crates/uc-core/: Cargo.toml
crates/uc-core/src/: account.rs  analytics.rs  analyzer.rs  assembler.rs  batcher.rs  chunker.rs  config.rs  contradiction.rs  crypto.rs  enhancer.rs  entities.rs  facts.rs  gate.rs  graph.rs  index.rs  keystore.rs  keyword_index.rs  lib.rs  models.rs  profile.rs  rebuild.rs  reranker.rs  retriever.rs  tagger.rs  writer.rs
crates/uc-embeddings/: Cargo.toml
crates/uc-embeddings/src/: lib.rs  llm.rs  ollama.rs  openai.rs
crates/uc-mcp/: Cargo.toml
crates/uc-mcp/src/: lib.rs  main.rs  server.rs
crates/uc-proxy/: Cargo.toml
crates/uc-proxy/src/: agentic.rs  anthropic.rs  lib.rs  main.rs  models.rs  routes.rs
crates/uc-server/: Cargo.toml
crates/uc-server/src/: app.rs  auth.rs  db.rs  error.rs  main.rs  metrics.rs  models.rs  pool.rs  rate_limit.rs  state.rs
crates/uc-server/src/routes/: admin.rs  analytics.rs  graph.rs  health.rs  integrations.rs  mod.rs  query.rs  retrieve.rs  sessions.rs  settings.rs  status.rs  store.rs
crates/uc-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/uc-tauri/src-tauri/capabilities/: default.json
crates/uc-tauri/src-tauri/icons/: icon.icns
crates/uc-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  services.rs
docs/: architecture.md  cli.md  desktop-app.md  settings.md
packaging/homebrew/: uc.rb
packaging/npm/: install.js  package.json
tests/latency/: benchmark.py  mock_upstream.py  results.json
tests/longmemeval/: results_accuracy_hybrid_48q_gpt-4o.json  results_accuracy_hybrid_v2_48q_gpt-4o.json  results_accuracy_oracle_48q_claude-sonnet-4-20250514.json  results_accuracy_oracle_48q_claude-sonnet.json  results_accuracy_oracle_48q_gpt-4o.json  results_accuracy_oracle_50q_gpt-4o.json  results_accuracy_s_100q_gpt-4o.json  results_accuracy_s_100q_timestamps_gpt-4o.json  results_oracle_20q.json  run_answer_accuracy.py  run_benchmark.py  run_mixed.py
tests/longmemeval/autoresearch/: .gitignore  experiment.py  prepare.py  program.md  results.tsv
tests/scale/: bench_500m.py  benchmark.py  build_index.py  clean_bench.py  fast_loader.py  openai_loader.py  parallel_loader.py  plot.py  query_bench.py  results_500m.json  results_500m_query.json  results_50m.json  results_clean.json  results_query_187k.json  results_query_compacted.json  results_quick.json  results_test.json  turbo_loader.py
tests/stress/: benchmark.py  generate.py
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: ActivityHeatmap.tsx  Highlight.tsx  IntegrationCard.tsx  Layout.tsx  Logo.tsx  NavIcons.tsx  SearchBar.tsx  SegmentBar.tsx  ServiceStatus.tsx  SessionList.tsx  Sparkline.tsx  StatusCard.tsx  SyncBar.tsx  Toggle.tsx  Tooltip.tsx  UpdateBadge.tsx
ui/src/components/setup/: SetupProgress.tsx  StepApiKey.tsx  StepComplete.tsx  StepEmbedding.tsx  StepIntegrations.tsx
ui/src/lib/: DataContext.tsx  ServiceContext.tsx  api.ts  telemetry.ts
ui/src/pages/: Analytics.tsx  Dashboard.tsx  Graph.tsx  Integrations.tsx  SessionDetail.tsx  Settings.tsx  Setup.tsx
