[workspace]
members = [
    "crates/uc-arweave",
    "crates/uc-embeddings",
    "crates/uc-core",
    "crates/uc-cli",
    "crates/uc-mcp",
    "crates/uc-proxy",
    "crates/uc-server",
    "crates/uc-tauri/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/t8/memoryport"
homepage = "https://memoryport.ai"
keywords = ["arweave", "lancedb", "rag", "embeddings", "llm", "memory"]
description = "Persistent queryable memory for LLMs using Arweave and LanceDB"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto
sha2 = "0.10"
rsa = "0.9"
base64 = "0.22"
rand = "0.8"

# Data
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1.0"

# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout", "fs"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"

# Auth + DB
rusqlite = { version = "0.32", features = ["bundled"] }
hex = "0.4"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Internal crates
uc-arweave = { path = "crates/uc-arweave" }
uc-embeddings = { path = "crates/uc-embeddings" }
uc-core = { path = "crates/uc-core" }
