[package]
name = "uc-arweave"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arweave client for Unlimited Context — transactions, signing, GraphQL, ar.io Turbo uploads"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
