[package]
name = "uc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for Unlimited Context"

[[bin]]
name = "uc"
path = "src/main.rs"

[dependencies]
uc-core = { workspace = true }

tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
