[package]
name = "uc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for Unlimited Context — chunking, indexing, retrieval, context assembly"

[dependencies]
uc-arweave = { workspace = true }
uc-embeddings = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# LanceDB + Arrow
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"

# Config directories
directories = "6"
