[package]
name = "uc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for Unlimited Context — chunking, indexing, retrieval, context assembly"

[dependencies]
uc-arweave = { workspace = true }
uc-embeddings = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# LanceDB + Arrow
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"

# Crypto
sha2 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Key store
rusqlite = { workspace = true }
hex = { workspace = true }

# Config directories
directories = "6"

[dev-dependencies]
tempfile = "3"
