[package]
name = "uc-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedding model abstraction for Unlimited Context — OpenAI, Ollama providers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
