[package]
name = "uc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-tenant HTTP API server for Unlimited Context"

[[bin]]
name = "uc-server"
path = "src/main.rs"

[dependencies]
uc-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { version = "4", features = ["derive"] }

rusqlite = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
directories = "6"
