[package]
name = "uc-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Memoryport desktop app"

[lib]
name = "uc_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uc-core = { path = "../../uc-core" }
uc-arweave = { path = "../../uc-arweave" }
toml = "0.8"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
